COMMERCE-7570 portal-language - buildLang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -12076,6 +12076,7 @@ recaptcha-private-key=reCAPTCHA, privater Schlüssel
 recaptcha-public-key=reCAPTCHA, öffentlicher Schlüssel
 recaptcha-script-url=reCAPTCHA Script-URL
 recaptcha-verify-url=reCAPTCHA URL verifizieren
+receive-a-notification-when-batch-engine-task-finishes=Batch engine task finishes. (Automatic Copy)
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=Ein Dokument in einem Ordner, den Sie abonniert haben, ist abgelaufen.
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=Überprüfen Sie ein Dokument in einem Ordner, den Sie abonniert haben.
 receive-a-notification-when-someone=Erhalten Sie eine Benachrichtigung, wenn jemand:
@@ -17396,6 +17397,8 @@ x-authorizations={0} Autorisierungen
 x-available={0} verfügbar
 x-base-price-list={0} Basispreisliste
 x-base-promotion={0} Basisaktion
+x-batch-engine-task-for-x-x={0} batch engine job for {1} {2}. (Automatic Copy)
+x-batch-engine-task-x={0} batch engine job {1}. (Automatic Copy)
 x-blog-entries={0} Blogeinträge
 x-bookmark={0} Lesezeichen
 x-bookmarks={0} Lesezeichen
