--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -12073,6 +12073,7 @@ recaptcha-private-key=reCAPTCHA yksityinen avain
 recaptcha-public-key=reCAPTCHA julkinen avain
 recaptcha-script-url=reCAPTCHA Komentosarjan URL
 recaptcha-verify-url=reCAPTCHA Vahvista URL
+receive-a-notification-when-batch-engine-task-finishes=Batch engine task finishes. (Automatic Copy)
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=Asiakirja tilaamassasi kansiossa on vanhentunut.
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=Tarkasta asiakirja kansiossa, jonka olet tilannut.
 receive-a-notification-when-someone=Saa ilmoitus, kun joku:
@@ -17392,6 +17393,8 @@ x-authorizations={0} Valtuutusta
 x-available={0} Saatavilla
 x-base-price-list={0} Perushintaluettelo
 x-base-promotion={0} Peruskampanja
+x-batch-engine-task-for-x-x={0} batch engine job for {1} {2}. (Automatic Copy)
+x-batch-engine-task-x={0} batch engine job {1}. (Automatic Copy)
 x-blog-entries={0} blogi-merkinnät
 x-bookmark={0} kirjanmerkki
 x-bookmarks={0} kirjanmerkit
