--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -12077,6 +12077,7 @@ recaptcha-private-key=reCAPTCHA privát kulcs
 recaptcha-public-key=reCAPTCHA nyilvános kulcs
 recaptcha-script-url=reCAPTCHA parancsfájl URL
 recaptcha-verify-url=reCAPTCHA ellenőrzés URL
+receive-a-notification-when-batch-engine-task-finishes=Batch engine task finishes. (Automatic Copy)
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=Egy dokumentum lejárt az egyik mappában, amelyre előfizetett.
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=Ellenőrizze a dokumentumot a mappában, amelyre előfizetett.
 receive-a-notification-when-someone=Értesítés megjelenítése amikor valaki...
@@ -17397,6 +17398,8 @@ x-authorizations={0} hitelesítés
 x-available={0} elérhető
 x-base-price-list={0} alapárlista
 x-base-promotion={0} alappromóció
+x-batch-engine-task-for-x-x={0} batch engine job for {1} {2}. (Automatic Copy)
+x-batch-engine-task-x={0} batch engine job {1}. (Automatic Copy)
 x-blog-entries={0} blog bejegyzések
 x-bookmark={0} könyvjelző
 x-bookmarks={0} könyvjelző
