--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -12076,6 +12076,7 @@ recaptcha-private-key=reCAPTCHAのプライベートキー
 recaptcha-public-key=reCAPTCHAのパブリックキー
 recaptcha-script-url=reCAPTCHA のスクリプト URL
 recaptcha-verify-url=reCAPTCHA のベリファイ URL
+receive-a-notification-when-batch-engine-task-finishes=Batch engine task finishes. (Automatic Copy)
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=購読先のフォルダ内のドキュメントが期限切れになりました。
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=購読先のフォルダ内のドキュメントをレビューしてください。
 receive-a-notification-when-someone=以下からの通知を受け取る :
@@ -17396,6 +17397,8 @@ x-authorizations={0} 件の権限
 x-available={0} 点在庫あり
 x-base-price-list={0}の基本価格表
 x-base-promotion={0}の基本プロモーション
+x-batch-engine-task-for-x-x={0} batch engine job for {1} {2}. (Automatic Copy)
+x-batch-engine-task-x={0} batch engine job {1}. (Automatic Copy)
 x-blog-entries={0}件のブログ
 x-bookmark={0} 個のブックマーク
 x-bookmarks={0} 個のブックマーク
