--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -12074,6 +12074,7 @@ recaptcha-private-key=Chave confidencial do reCAPTCHA
 recaptcha-public-key=Chave pública do reCAPTCHA
 recaptcha-script-url=URL de Script com reCAPTCHA
 recaptcha-verify-url=Verificar URL com reCAPTCHA
+receive-a-notification-when-batch-engine-task-finishes=Batch engine task finishes. (Automatic Copy)
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=Um documento em uma pasta que você assina expirou.
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=Revise um documento em uma pasta que você esteja inscrito.
 receive-a-notification-when-someone=Receber uma notificação quando alguém:
@@ -17394,6 +17395,8 @@ x-authorizations=Autorizações de {0}
 x-available={0} disponível
 x-base-price-list={0} Lista de preço base
 x-base-promotion={0} Promoção base
+x-batch-engine-task-for-x-x={0} batch engine job for {1} {2}. (Automatic Copy)
+x-batch-engine-task-x={0} batch engine job {1}. (Automatic Copy)
 x-blog-entries={0} posts de blog
 x-bookmark={0} Favoritos
 x-bookmarks={0} Favoritos
