--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -12074,6 +12074,7 @@ recaptcha-private-key=Privat reCAPTCHA-nyckel
 recaptcha-public-key=Publik reCAPTCHA-nyckel
 recaptcha-script-url=Skript-URL för reCAPTCHA
 recaptcha-verify-url=Verifiera URL för reCAPTCHA
+receive-a-notification-when-batch-engine-task-finishes=Batch engine task finishes. (Automatic Copy)
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=Ett dokument i en mapp som du prenumererar på har slutat gälla.
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=Granska ett dokument i en mapp som du prenumererar på.
 receive-a-notification-when-someone=Ta emot en avisering när någon:
@@ -17394,6 +17395,8 @@ x-authorizations={0} auktoriseringar
 x-available={0} tillgänglig
 x-base-price-list={0} Grundläggande prislista
 x-base-promotion={0} Grundläggande kampanj
+x-batch-engine-task-for-x-x={0} batch engine job for {1} {2}. (Automatic Copy)
+x-batch-engine-task-x={0} batch engine job {1}. (Automatic Copy)
 x-blog-entries={0} Blogg-inlägg
 x-bookmark=Lägg till bokmärke
 x-bookmarks={0} bokmärken
