--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -12074,6 +12074,7 @@ recaptcha-private-key=مفتاح reCAPTCHA الخاص
 recaptcha-public-key=مفتاح reCAPTCHA العام
 recaptcha-script-url=إعادة إنشاء الكابتشا لعنوان URL بنص برمجي
 recaptcha-verify-url=إعادة إنشاء الكابتشا لعنوان URL للتحقق
+receive-a-notification-when-batch-engine-task-finishes=Batch engine task finishes. (Automatic Copy)
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=انتهت صلاحية مستند في مجلد أنت مشرك به.
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=مراجعة مستند في المجلد الذي تشترك به.
 receive-a-notification-when-someone=تلقي إعلام عندما يقوم شخص بما يلي:
@@ -17394,6 +17395,8 @@ x-authorizations={0} من التخويلات
 x-available={0} متوفر
 x-base-price-list=قائمة الأسعار الأساسية لـ {0}
 x-base-promotion=حملة الترويج الأساسية لـ {0}
+x-batch-engine-task-for-x-x={0} batch engine job for {1} {2}. (Automatic Copy)
+x-batch-engine-task-x={0} batch engine job {1}. (Automatic Copy)
 x-blog-entries={0} تدوينات
 x-bookmark=عرض الأدلة المسجلة
 x-bookmarks={0} من الإشارات المرجعية
