--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -12076,6 +12076,7 @@ recaptcha-private-key=Clave privada de reCAPTCHA
 recaptcha-public-key=Clave pública de reCAPTCHA
 recaptcha-script-url=URL de script de reCAPTCHA
 recaptcha-verify-url=URL de verificación de reCAPTCHA
+receive-a-notification-when-batch-engine-task-finishes=Batch engine task finishes. (Automatic Copy)
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=Ha caducado un documento de una carpeta a la que está suscrito.
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=Revise un documento en una carpeta a la que esté suscrito.
 receive-a-notification-when-someone=Recibir una notificación cuando alguien:
@@ -17396,6 +17397,8 @@ x-authorizations={0} autorizaciones
 x-available={0} disponibles
 x-base-price-list={0} lista de precios base
 x-base-promotion={0} promoción base
+x-batch-engine-task-for-x-x={0} batch engine job for {1} {2}. (Automatic Copy)
+x-batch-engine-task-x={0} batch engine job {1}. (Automatic Copy)
 x-blog-entries={0} entradas de blog
 x-bookmark={0} marcador
 x-bookmarks={0} marcadores
