--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -12077,6 +12077,7 @@ recaptcha-private-key=Privésleutel van reCAPTCHA
 recaptcha-public-key=Openbare sleutel van reCAPTCHA
 recaptcha-script-url=reCAPTCHA script-URL
 recaptcha-verify-url=reCAPTCHA verificatie-URL
+receive-a-notification-when-batch-engine-task-finishes=Batch engine task finishes. (Automatic Copy)
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=Een document in de map waarop u geabonneerd bent, is verlopen.
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=Controleer een document in een map waarop u bent geabonneerd.
 receive-a-notification-when-someone=Ontvangt een melding wanneer iemand:
@@ -17397,6 +17398,8 @@ x-authorizations={0} autorisaties
 x-available={0} beschikbaar
 x-base-price-list={0} basisprijslijst
 x-base-promotion={0} basispromotie
+x-batch-engine-task-for-x-x={0} batch engine job for {1} {2}. (Automatic Copy)
+x-batch-engine-task-x={0} batch engine job {1}. (Automatic Copy)
 x-blog-entries={0} blogs
 x-bookmark={0} favoriet
 x-bookmarks={0} favorieten
