--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -9933,7 +9933,7 @@ no-data-migration-processes-are-available=No està disponible cap procés per a 
 no-data-providers-were-found=No s'ha trobat cap proveïdor de dades.
 no-declined-invites=Cap invitació rebutjada.
 no-default-display-page-template=No hi ha cap plantilla de pàgina de visualització per defecte
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=No s'ha trobat cap definició.
 no-delivery-terms=Sense condicions de lliurament
 no-description=No hi ha cap descripció
@@ -14980,7 +14980,7 @@ the-google-client-id-is-invalid=Si us plau, entreu una ID de client Google vàli
 the-google-client-secret-is-invalid=Si us plau, introduïu un compte de secret del client de Google.
 the-google-places-api-key-is-not-set=La clau d'API de Google Places no està establerta.
 the-header-search-bar-configuration-takes-precedence=Per als camps desactivats, la configuració de la barra de cerca de la capçalera de la pàgina té preferència.
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=L'ID es basa en el camp del nom.
 the-id-you-entered-is-reserved-x=L'ID que heu introduït està reservat: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=El rol de proveïdor d'identitats s'ha deshabilitat. Es pot tornar a habilitar a Configuració del sistema.
