--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Aucun procédé de transfert de donné
 no-data-providers-were-found=Aucun fournisseur de données n'a été trouvée.
 no-declined-invites=Aucune invitation déclinée.
 no-default-display-page-template=Pas de modèle de page d'affichage par défaut
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Aucune définition n'a été trouvée.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Veuillez entrer un identifiant Google valide.
 the-google-client-secret-is-invalid=Veuillez entrer une question secrète du client Google valide.
 the-google-places-api-key-is-not-set=La clé de l'API Google Places n'est pas définie.
 the-header-search-bar-configuration-takes-precedence=Pour les champs désactivés, la configuration de la barre de recherche de l'en-tête de page est prioritaire.
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=L'identifiant se base sur le nom du champ.
 the-id-you-entered-is-reserved-x=L'ID que vous avez saisi est réservé : {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Le rôle de fournisseur d'identité a été désactivé. Vous pouvez me réactiver depuis les Paramètres système.
