--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Tidak ada proses migrasi data yang ter
 no-data-providers-were-found=Tidak ada penyedia data yang ditemukan. (Automatic Translation)
 no-declined-invites=Tidak ada menurun mengundang.
 no-default-display-page-template=Tidak Ada Templat Halaman Tampilan Default (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Tidak ada definisi yang ditemukan.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Masukkan ID klien Google yang valid. (Automatic 
 the-google-client-secret-is-invalid=Masukkan rahasia klien Google yang valid. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Untuk bidang yang dinonaktifkan, konfigurasi Bilah Pencarian header halaman lebih diutamakan. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID didasarkan pada bidang nama. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Peran penyedia identitas telah dinonaktifkan. Ini dapat diaktifkan kembali di Pengaturan Sistem. (Automatic Translation)
