--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Nie ma dostępnych procesów migracji 
 no-data-providers-were-found=Nie znaleziono dostawców danych. (Automatic Translation)
 no-declined-invites=Brak odrzuconych zaproszeń.
 no-default-display-page-template=Brak domyślnego szablonu strony wyświetlania (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Nie znaleziono definicji.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Wprowadź prawidłowy identyfikator klienta Goog
 the-google-client-secret-is-invalid=Wprowadź prawidłowy klucz tajny klienta Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=W przypadku wyłączonych pól pierwszeństwo ma konfiguracja paska wyszukiwania nagłówka strony. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Identyfikator jest oparty na polu nazwy. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Rola dostawcy tożsamości została wyłączona. Można go ponownie włączyć w ustawieniach systemu. (Automatic Translation)
