--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Nenhum processo da migração de dados
 no-data-providers-were-found=Nenhum provedor de dados foi encontrado.
 no-declined-invites=Nenhum convite recusado.
 no-default-display-page-template=Nenhum Modelo de Página de Exibição Padrão
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Não foram encontradas definições.
 no-delivery-terms=Nenhum termo de entrega
 no-description=Nenhuma descrição
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Por favor, insira uma ID válida de cliente Goog
 the-google-client-secret-is-invalid=Por favor, insira um segredo válido de cliente Google.
 the-google-places-api-key-is-not-set=A chave API do Google Places não foi definida.
 the-header-search-bar-configuration-takes-precedence=Para campos desabilitados, a configuração da Barra de busca do cabeçalho da página tem precedente.
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=O ID é baseado no campo nome.
 the-id-you-entered-is-reserved-x=O ID inserido está reservado: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=A função de provedor de identidade foi desativada. Pode ser habilitada novamente nas Configurações de Sistema.
