--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -9933,7 +9933,7 @@ no-data-migration-processes-are-available=Nenhum processo da migração de dados
 no-data-providers-were-found=Não foram encontrados fornecedores de dados.
 no-declined-invites=Nenhum convite recusado.
 no-default-display-page-template=Sem modelo de página de exibição padrão (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Nenhuma definição foi encontrada.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14980,7 +14980,7 @@ the-google-client-id-is-invalid=Por favor, introduza um ID de cliente Google vá
 the-google-client-secret-is-invalid=Por favor, introduza um segredo de cliente Google válido.
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Para campos desativados, a configuração de barra de pesquisa do cabeçalho da página tem precedência. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=O ID é baseado no campo nome.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=O papel de provedor de identidade foi desativado. Ele pode ser reativado nas configurações do sistema. (Automatic Translation)
