--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Nie sú k dispozícii žiadne migračn
 no-data-providers-were-found=Nenašli sa žiadni poskytovatelia údajov.
 no-declined-invites=Žiadne zamietnuté pozvánky.
 no-default-display-page-template=Žiadna predvolená šablóna zobrazenej strany (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Nenašla sa žiadna definícia.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Zadajte platný identifikátor klienta Google. (
 the-google-client-secret-is-invalid=Zadajte platné tajomstvo klienta Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=V prípade zakázaných polí má prednosť konfigurácia panela vyhľadávania hlavičky stránky. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Identifikácia je založená na poli názvu. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Rola poskytovateľa identity bola vypnutá. Je možné ho znova zapnúť v systémových nastaveniach. (Automatic Translation)
