--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Trenutno ni na voljo nobenih procesov 
 no-data-providers-were-found=Ponudnikov podatkov ni bilo mogoče najti. (Automatic Translation)
 no-declined-invites=Nobenih zavrnjenih povabil. (Automatic Translation)
 no-default-display-page-template=Ni privzete predloge strani za prikaz (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Ni definicij.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Vnesite veljaven ID Googlovega odjemalca. (Autom
 the-google-client-secret-is-invalid=Vnesite veljavno skrivnost Googlovega odjemalca. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Za onemogočana polja ima prednost konfiguracija vrstice za iskanje glave strani. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID temelji na polju imena. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Vloga ponudnika identitete je bila onemogotena. V sistemskih nastavitvah ga je mogoče ponovno omogočiti. (Automatic Translation)
