--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Kullanılabilir veri taşıma işlemi 
 no-data-providers-were-found=Veri sağlayıcısı bulunamadı. (Automatic Translation)
 no-declined-invites=Reddedilen davet yok. (Automatic Translation)
 no-default-display-page-template=Varsayılan Görüntüleme Sayfası Şablonu Yok (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Hiç tanım bulunamadı.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Lütfen geçerli bir Google istemci kimliği gir
 the-google-client-secret-is-invalid=Lütfen geçerli bir Google istemci sırrı girin. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Devre dışı bırakılan alanlar için, sayfa üstbilgisi Arama Çubuğu yapılandırması önceliklidir. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Kimlik, ad alanını temel alan bir kimliktir. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Kimlik sağlayıcı rolü devre dışı bırakıldı. Sistem Ayarları'nda yeniden etkinleştirilebilir. (Automatic Translation)
