--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -9933,7 +9933,7 @@ no-data-migration-processes-are-available=没有可用的数据移动处理。
 no-data-providers-were-found=未查询到数据提供程序。
 no-declined-invites=没有被拒绝的邀请。
 no-default-display-page-template=无默认显示页模板
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=没有找到定义。
 no-delivery-terms=无交货条款
 no-description=无描述
@@ -14980,7 +14980,7 @@ the-google-client-id-is-invalid=请输入有效的谷歌客户端账号。
 the-google-client-secret-is-invalid=请输入有效谷歌客户端密钥。
 the-google-places-api-key-is-not-set=未设置 Google Places API 密钥。
 the-header-search-bar-configuration-takes-precedence=对于禁用的字段，页面标题搜索栏配置优先。
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=该ID基于名称字段。
 the-id-you-entered-is-reserved-x=您输入的 ID 预留备用：{0}。
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=该身份提供程序角色已被禁用。可以在"系统设置"中重新启用。
