--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Není k dispozici žádný proces pro 
 no-data-providers-were-found=Nebyli nalezeni žádní zprostředkovatelé dat. (Automatic Translation)
 no-declined-invites=Žádné odmítnuté pozvánky.
 no-default-display-page-template=Žádná výchozí šablona stránky zobrazení (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Nebyly nalezeny žádné definice.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Zadejte platné ID klienta Google. (Automatic Tr
 the-google-client-secret-is-invalid=Zadejte platný tajný klíč klienta Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=U zakázaných polí má přednost konfigurace vyhledávacího panelu záhlaví stránky. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID je založeno na poli názvu. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Role zprostředkovatele identity byla zakázána. Lze jej znovu povolit v nastavení systému. (Automatic Translation)
