--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Der er ingen tilgængelige dataoverfø
 no-data-providers-were-found=Der blev ikke fundet nogen dataprovidere. (Automatic Translation)
 no-declined-invites=Ingen afviste invitationer. (Automatic Translation)
 no-default-display-page-template=Skabelonen Ingen standardvisningsside (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=No definitions were found. (Automatic Copy)
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Angiv et gyldigt Google-klient-id. (Automatic Tr
 the-google-client-secret-is-invalid=Angiv en gyldig Google-klienthemmelighed. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=I forbindelse med deaktiverede felter har konfigurationen af sidehovedets søgefelt forrang. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Id'et er baseret på navnefeltet. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identitetsproviderrollen er deaktiveret. Den kan aktiveres igen i Systemindstillinger. (Automatic Translation)
