--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -9933,7 +9933,7 @@ no-data-migration-processes-are-available=Es sind keine Datenmigrationsprozesse 
 no-data-providers-were-found=Keine Datenanbieter wurden gefunden.
 no-declined-invites=Keine abgelehnten Einladungen.
 no-default-display-page-template=Keine Standardvorlage für die Anzeigenseite vorhanden
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Keine Definitionen wurden gefunden.
 no-delivery-terms=Keine Zustellungsbedingungen
 no-description=Keine Beschreibung
@@ -14980,7 +14980,7 @@ the-google-client-id-is-invalid=Bitte geben Sie eine gültige Google Client-ID a
 the-google-client-secret-is-invalid=Bitte geben Sie ein gültiges Google Client-Secret an.
 the-google-places-api-key-is-not-set=Der Google Places API-Schlüssel wurde nicht festgelegt.
 the-header-search-bar-configuration-takes-precedence=Bei deaktivierten Feldern hat die Konfiguration der Suchleiste in der Kopfzeile Vorrang.
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Die ID basiert auf dem Namensfeld.
 the-id-you-entered-is-reserved-x=Die von Ihnen eingegebene ID ist reserviert: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Die Rolle Identity-Provider wurde deaktiviert. Sie kann in den Systemeinstellungen erneut aktiviert werden.
