--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -9937,7 +9937,7 @@ no-data-migration-processes-are-available=No data migration processes are availa
 no-data-providers-were-found=No data providers were found.
 no-declined-invites=No declined invites.
 no-default-display-page-template=No Default Display Page Template
-no-default-sort-created-yet=No default sort created yet.
+no-default-sort-was-created-yet=No default sort was created yet.
 no-definitions-were-found=No definitions were found.
 no-delivery-terms=No Delivery Terms
 no-description=No Description
@@ -14984,7 +14984,7 @@ the-google-client-id-is-invalid=Please enter a valid Google client ID.
 the-google-client-secret-is-invalid=Please enter a valid Google client secret.
 the-google-places-api-key-is-not-set=The Google Places API key is not set.
 the-header-search-bar-configuration-takes-precedence=For disabled fields, the page header Search Bar configuration takes precedence.
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields.
 the-id-is-based-on-the-name-field=The ID is based on the name field.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=The identity provider role has been disabled. It can be re-enabled in System Settings.
