--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -9933,7 +9933,7 @@ no-data-migration-processes-are-available=No hay disponible ningún proceso para
 no-data-providers-were-found=No se ha encontrado ningún proveedor de datos.
 no-declined-invites=No hay invitaciones declinadas.
 no-default-display-page-template=No hay ninguna plantilla de página de visualización por defecto
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=No se ha encontrado ninguna definición.
 no-delivery-terms=No hay condiciones de entrega
 no-description=Sin descripción
@@ -14980,7 +14980,7 @@ the-google-client-id-is-invalid=Por favor introduzca un identificador del client
 the-google-client-secret-is-invalid=Por favor, introduzca un secreto del cliente de Google válido.
 the-google-places-api-key-is-not-set=No se ha establecido la clave de API de Google Places.
 the-header-search-bar-configuration-takes-precedence=Para los campos deshabilitados, la configuración de la barra de búsqueda del encabezado de página tiene prioridad.
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=El identificador está basado en el campo nombre.
 the-id-you-entered-is-reserved-x=El identificador que ha especificado está reservado: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Se ha deshabilitado el rol de proveedor de identidades. Puede volver a habilitarlo en la configuración del sistema.
