--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Ühtegi andmemigratsiooni protsessi ei
 no-data-providers-were-found=Andmepakkujaid ei leitud. (Automatic Translation)
 no-declined-invites=Tagasilükatud kutseid pole. (Automatic Translation)
 no-default-display-page-template=Vaikekuvalehe mall puudub (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Ühtegi definitsiooni ei leitud.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Sisestage kehtiv Google'i kliendi ID. (Automatic
 the-google-client-secret-is-invalid=Sisestage kehtiv Google'i kliendi saladus. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Keelatud väljade puhul on ülimuslik lehepäise otsinguriba konfiguratsioon. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID põhineb nimeväljal. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identiteedipakkuja roll on keelatud. Seda saab süsteemisätetes uuesti lubada. (Automatic Translation)
