--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Tieodon tuonti prosessia ei ole saatav
 no-data-providers-were-found=Tietolähteitä ei ole määritelty.
 no-declined-invites=Ei hylättyjä kutsuja.
 no-default-display-page-template=Ei Oletus-Näyttösivumallia
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Yhtään määrittelyä ei löytynyt.
 no-delivery-terms=Ei toimitusehtoja
 no-description=Ei kuvausta
@@ -14976,7 +14976,7 @@ the-google-client-id-is-invalid=Syötä kelvollinen Google-asiakastunnus.
 the-google-client-secret-is-invalid=Syötä kelvollinen Googlen asiakkaan salasana.
 the-google-places-api-key-is-not-set=Google Placesin API-avainta ei ole määritetty.
 the-header-search-bar-configuration-takes-precedence=Käytöstä poistetuille kentille sivun ylätunnisteen Hakupalkin määritys on etusijalla.
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Tunnus perustuu nimikenttään.
 the-id-you-entered-is-reserved-x=Antamasi ID on varattu: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identiteetin tarjoajan rooli on poistettu käytöstä. Se voidaan ottaa uudelleen käyttöön Järjestelmän asetuksista.
