--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Ingen datamigrasjonsprosesser er tilgj
 no-data-providers-were-found=Ingen datatilbydere ble funnet.
 no-declined-invites=Ingen avviste invitasjoner.
 no-default-display-page-template=Ingen standard visningssidemal
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Ingen definisjoner ble funnet.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Angi en gyldig Google-klient-ID. (Automatic Tran
 the-google-client-secret-is-invalid=Skriv inn en gyldig Google-klienthemmelighet. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=For deaktiverte felt har konfigurasjonen av søkefeltet for sideoverskriften forrang. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID er basert på navnefeltet.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identitetsleverandørrollen er deaktivert. Den kan aktiveres på nytt i Systeminnstillinger. (Automatic Translation)
