--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -9934,7 +9934,7 @@ no-data-migration-processes-are-available=Er zijn geen datamigratieprocessen bes
 no-data-providers-were-found=Er zijn geen dataproviders gevonden.
 no-declined-invites=Er zijn geen afgewezen uitnodigingen.
 no-default-display-page-template=Geen standaard weergavepaginasjabloon
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Er zijn geen definities gevonden.
 no-delivery-terms=Geen leveringsvoorwaarden
 no-description=Geen beschrijving
@@ -14981,7 +14981,7 @@ the-google-client-id-is-invalid=Voer een geldige Google client ID in.
 the-google-client-secret-is-invalid=Voer een geldige Google client secret in.
 the-google-places-api-key-is-not-set=De API-sleutel voor Google Places is niet ingesteld.
 the-header-search-bar-configuration-takes-precedence=Voor uitgeschakelde velden heeft de zoekbalkconfiguratie van de paginakoptekst voorrang.
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Het Id is afgeleid van het naam veld.
 the-id-you-entered-is-reserved-x=De ingevoerde ID is voorbehouden: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=De ID-providerrol werd uitgeschakeld. Schakel de rol opnieuw in via de systeeminstellingen.
