--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -9934,7 +9934,7 @@ no-data-migration-processes-are-available=Er zijn geen migratieprocessen van geg
 no-data-providers-were-found=No data providers were found. (Automatic Copy)
 no-declined-invites=No declined invites. (Automatic Copy)
 no-default-display-page-template=No Default Display Page Template (Automatic Copy)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Er zijn geen definities gevonden.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14981,7 +14981,7 @@ the-google-client-id-is-invalid=Please enter a valid Google client ID. (Automati
 the-google-client-secret-is-invalid=Please enter a valid Google client secret. (Automatic Copy)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=For disabled fields, the page header Search Bar configuration takes precedence. (Automatic Copy)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=The ID is based on the name field. (Automatic Copy)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=The identity provider role has been disabled. It can be re-enabled in System Settings. (Automatic Copy)
