--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Nu exista procese de migrare de date d
 no-data-providers-were-found=Nu s-au găsit furnizori de date. (Automatic Translation)
 no-declined-invites=Fără invitații refuzate. (Automatic Translation)
 no-default-display-page-template=Fără șablon implicit de pagină de afișare (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Nu a fost gasita nici o definitie.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Introduceți un ID de client Google valid. (Auto
 the-google-client-secret-is-invalid=Introduceți un secret de client Google valid. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Pentru câmpurile dezactivate, configurația barei de căutare a antetului paginii are prioritate. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID-ul se bazează pe câmpul nume. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Rolul furnizorului de identitate a fost dezactivat. Poate fi reactivat în Setări sistem. (Automatic Translation)
