--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -9931,7 +9931,7 @@ no-data-migration-processes-are-available=Немає доступних проц
 no-data-providers-were-found=Постачальників даних не знайдено. (Automatic Translation)
 no-declined-invites=Немає відхилених запрошень. (Automatic Translation)
 no-default-display-page-template=Немає шаблону відображуваної сторінки за промовчанням (Automatic Translation)
-no-default-sort-created-yet=No default sort created yet. (Automatic Copy)
+no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Означень процесів не знайдено.
 no-delivery-terms=No Delivery Terms (Automatic Copy)
 no-description=No Description (Automatic Copy)
@@ -14978,7 +14978,7 @@ the-google-client-id-is-invalid=Введіть припустимий ідент
 the-google-client-secret-is-invalid=Введіть дійсну таємницю клієнта Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Для вимкнених полів пріоритет має конфігурація панелі пошуку заголовка сторінки. (Automatic Translation)
-the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields-you-can-re-arrange-by-using-the-drag-and-drop=The hierarchy of the default sorting will be defined by the vertical order of the fields, you can re-arrange by using the drag and drop. (Automatic Copy)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Ідентифікатор засновано на полі імені. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Роль постачальника посвідчень вимкнуто. Його можна знову ввімкнути в системних параметрах. (Automatic Translation)
